--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^9.1.0",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
